# grr

./: .dockerignore  .gitignore  .gitmodules  .nojekyll  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  CHANGELOG  CHANGELOG.md  CNAME  Dockerfile  Dockerfile.base  Dockerfile.client  MANIFEST.in  Makefile  README  README.md  __init__.py  appveyor.yml  before_install.sh  build_requirements.in  build_requirements.txt  compose.testing.yaml  compose.watch.yaml  compose.yaml  conftest.py  docker-compose.testing.yaml  docker-compose.yaml  docs.html  docs.md  faq.html  faq.md  gsoc_2021.md  index.html  index.md  install.sh  makefile.py  package-lock.json  pytest.ini  requirements.txt  (+7 more)
api_client/python/: README.md  pyproject.toml  requirements.in  setup.py
api_client/python/grr_api_client/: __init__.py  api.py  api_shell.py  api_shell_lib.py  artifact.py  client.py  config.py  connector.py  context.py  errors.py  flow.py  hunt.py  metadata.py  root.py  types.py  user.py  utils.py  utils_test.py  vfs.py  yara.py
client/minicomm/: CMakeLists.txt  base.h  client.cc  client.h  client_action.cc  client_action.h  client_action_dispatcher.cc  client_action_dispatcher.h  client_action_dispatcher_test.cc  client_action_test.cc  client_info.h  client_main.cc  client_test_base.cc  client_test_base.h  comms_utils.cc  comms_utils.h  comms_utils_test.cc  compression.cc  compression.h  compression_test.cc  config.cc  config.h  config.proto  config_test.cc  crypto.cc  crypto.h  crypto_test.cc  file_contents.cc  file_contents_test.cc  file_operations.cc  file_operations.h  file_operations_test.cc  grr_test_main.cc  http_connection.cc  http_connection.h  logging_control.cc  logging_control.h  message_queue.cc  message_queue.h  message_queue_test.cc  (+12 more)
client/minicomm/client_actions/: enumerate_filesystems.cc  enumerate_filesystems.h  enumerate_filesystems_test.cc  enumerate_interfaces.cc  enumerate_interfaces.h  enumerate_interfaces_test.cc  enumerate_users.cc  enumerate_users.h  enumerate_users_test.cc  find.cc  find.h  find_test.cc  fingerprint_file.cc  fingerprint_file.h  fingerprint_file_test.cc  get_install_date.cc  get_library_versions.cc  get_library_versions.h  get_platform_info.cc  get_platform_info.h  get_platform_info_test.cc  grep.cc  grep.h  grep_test.cc  list_directory.cc  list_directory.h  list_directory_test.cc  list_processes.cc  list_processes.h  list_processes_test.cc  stat_file.cc  stat_file.h  transfer_buffer.cc  transfer_buffer.h  transfer_buffer_test.cc
grr/client/minicomm/: CMakeLists.txt  client_action.h  client_action_test.cc  client_main.cc  client_test_base.cc  client_test_base.h  comms_utils.h  comms_utils_test.cc  compression.cc  compression.h  config.cc  config.h  config.proto  crypto_test.cc  file_contents.h  file_operations.h  http_connection.cc  http_connection.h  logging_control.cc  logging_control.h  message_queue.cc  mock_delegate.sh  paths.cc  paths.h  paths_test.cc  resource_monitor.h  scoped_ptr_ssl.h  subprocess_delegator.cc  tempfiles.cc  tempfiles_test.cc  util.h  util_test.cc
grr/core/: MANIFEST.in  pyproject.toml  requirements.in  setup.py
grr/core/accelerated/: accelerated.c  setup.py
grr/core/grr_response_core/: version.py
grr/core/install_data/: wrapper.sh.in
grr/core/scripts/: debian_launcher  debian_launcher_no_extra_args  docker-entrypoint.sh  install_server_from_src.sh  make_new_server_key.py
grr/proto/: __init__.py  acls.proto  analysis.proto  anomaly.proto  api.proto  api_call_router.proto  api_utils.proto  artifact.proto  build_requirements.in  build_requirements.txt  config_file.proto  data_store.proto  export.proto  flows.proto  jobs.proto  knowledge_base.proto  makefile.py  objects.proto  output_plugin.proto  pyproject.toml  requirements.in  setup.py  sysinfo.proto  tests.proto
grr/proto/api/: artifact.proto  client.proto  config.proto  cron.proto  flow.proto  hunt.proto  output_plugin.proto  reflection.proto  stats.proto  user.proto  vfs.proto
grr/proto/grr_response_proto/: acls.proto  analysis.proto  anomaly.proto  api_call_router.proto  api_utils.proto  apple_firmware.proto  artifact.proto  auto_export.proto  checks.proto  chipsec.proto  cloud.proto  config.proto  config_file.proto  containers.proto  crowdstrike.proto  data_store.proto  deprecated.proto  distro.proto  dummy.proto  export.proto  file_store.proto  flows.proto  hunts.proto  jobs.proto  knowledge_base.proto  large_file.proto  objects.proto  osquery.proto  output_plugin.proto  pipes.proto  read_low_level.proto  rekall.proto  rrg.proto  semantic.proto  signed_commands.proto  sysinfo.proto  tests.proto  timeline.proto  user.proto
grr/server/: MANIFEST.in  __init__.py  access_control.py  aff4.py  aff4_test.py  artifact.py  artifact_registry.py  artifact_registry_test.py  artifact_test.py  artifact_utils.py  artifact_utils_test.py  bigquery_test.py  client_fixture.py  client_index.py  client_index_test.py  console_utils.py  console_utils_test.py  data_migration.py  data_store.py  data_store_test.py  db.py  db_clients_test.py  db_test.py  db_test_mixin.py  db_users_test.py  db_utils.py  db_utils_test.py  distro_entry.py  email_alerts.py  email_alerts_test.py  events.py  events_test.py  export.py  export_test.py  export_utils.py  export_utils_test.py  file_store.py  fleetspeak_test.py  fleetspeak_utils.py  flow.py  (+51 more)
grr/server/aff4_objects/: __init__.py  aff4_grr.py  aff4_grr_test.py  aff4_queue.py  aff4_queue_test.py  benchmark_test.py  collects.py  collects_test.py  cronjobs.py  cronjobs_test.py  filestore.py  filestore_test.py  filestore_test_lib.py  hardware.py  queue.py  queue_test.py  registry_init.py  security.py  security_test.py  software.py  standard.py  standard_test.py  stats.py  stats_store.py  stats_store_test.py  tests.py  user_managers.py  user_managers_test.py  users.py  users_test.py
grr/server/authorization/: auth_manager.py  auth_manager_test.py  client_approval_auth.py  client_approval_auth_test.py  groups.py  tests.py
grr/server/blob_stores/: memory_stream_bs.py  registry_init.py
grr/test/: MANIFEST.in  pyproject.toml  setup.py
(+7471 files in other folders)
