[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grr-response-core"
description = "GRR Rapid Response"
readme = "README.md"
license = {text = "Apache License, Version 2.0"}
maintainers = [
    {name = "GRR Development Team", email = "grr-dev@googlegroups.com"}
]
urls = {Homepage = "https://github.com/google/grr"}
requires-python = ">=3.6"
dynamic = ["version", "dependencies"]

[tool.setuptools]
zip-safe = false
