[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grr-response-test"
description = "The GRR Rapid Response test suite."
readme = "README.md"
license = {text = "Apache License, Version 2.0"}
urls = {Homepage = "https://github.com/google/grr"}
dynamic = ["version", "dependencies"]
